[teaching materials] add lab 1-3 for csci3150 (2016 fall)

--- a/index.html
+++ b/index.html
@@ -1,1 +1,14 @@
-Welcome
+<!DOCTYPE html>
+<html>
+Welcome to Helen's webpage :)
+
+<h2>Teaching materials</h2>
+
+<h3>CSCI 3150 (2016 Fall)</h3>
+  <ul>
+    <li><a href="teaching/csci3150-2016fall/lab1/lab1.html">Lab 1 -- Setup a Linux (Ubuntu) Environment</a></li>
+    <li><a href="teaching/csci3150-2016fall/lab2/lab2.html">Lab 2 -- Basics on Bash Operators, and C program Compilation</a></li>
+    <li><a href="teaching/csci3150-2016fall/lab3/lab3.html">Lab 3 -- Bash Script Writing</a></li>
+  </ul>
+
+</html>
