--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@ Welcome to Helen's webpage :)
 
 <h2>Teaching materials</h2>
 
-<h3>CSCI 3150 (2016 Fall)</h3>
+<h3>ESTR 3102 Introduction to Operating Systems (2015 Fall)</h3> 
+
+<h3>CSCI 3150 Introduction to Operating Systems (2016 Fall)</h3>
   <ul>
     <li><a href="teaching/csci3150-2016fall/lab1/lab1.html">Lab 1 -- Setup a Linux (Ubuntu) Environment</a></li>
     <li><a href="teaching/csci3150-2016fall/lab2/lab2.html">Lab 2 -- Basics on Bash Operators, and C program Compilation</a></li>
