[teaching materials] fix pictures display for labs of csci3150 (2016 fall)

--- a/teaching/csci3150-2016fall/lab1/lab1.html
+++ b/teaching/csci3150-2016fall/lab1/lab1.html
@@ -503,7 +503,7 @@ pre.editor-colors .fold-marker:after,
 <p><a name="setup"></a></p>
 <h3 id="1-obtain-virtualbox">1. Obtain VirtualBox</h3>
 <p>VirtualBox is one of the software for VM hosting. It runs on Mac OS, Windows, and Linux, and is freely available on its official website, <a href="https://www.virtualbox.org/wiki/Downloads">https://www.virtualbox.org/wiki/Downloads</a>. You may download an installer of the latest version, according to your computer&#39;s OS.</p>
-<p><img src="C:\Users\Helen\Documents\GitHub\helenchw.github.io\teaching\csci3150-2016fall\lab1\figs\vbox.png" alt="VirtualBox Download Page"></p>
+<p><img src="figs\vbox.png" alt="VirtualBox Download Page"></p>
 <p>After downloading the installer, open it to install VirtualBox and use the default configurations, i.e., all you need to do is to click &quot;Next&quot; to proceed and &quot;Yes&quot; for prompts asking for permissions to modify computer&#39;s settings until the installation completes.</p>
 <h3 id="2-obtain-the-virtualbox-machine-image">2. Obtain the VirtualBox machine image</h3>
 <p>Download the machine image for our course, which is a clean installation of 32-bit Ubuntu Trusty Desktop. The image, named &quot;csci3150-ubuntu.ova&quot;, can be obtained <a href="https://goo.gl/he6ISS">here</a>.</p>
@@ -517,46 +517,46 @@ pre.editor-colors .fold-marker:after,
 </ul>
 <h3 id="3-import-the-machine-image">3. Import the machine image</h3>
 <p>Open VirtualBox,</p>
-<p><img src="C:\Users\Helen\Documents\GitHub\helenchw.github.io\teaching\csci3150-2016fall\lab1\figs\vbox-window.png" alt="VirtualBox window"></p>
+<p><img src="figs\vbox-window.png" alt="VirtualBox window"></p>
 <p>Select &quot;File&quot; &gt; &quot;Import Appliance ...&quot;.</p>
-<p><img src="C:\Users\Helen\Documents\GitHub\helenchw.github.io\teaching\csci3150-2016fall\lab1\figs\import.png" alt="Import machine image"></p>
+<p><img src="figs\import.png" alt="Import machine image"></p>
 <p>Locate the machine image and click &quot;Next&quot;.</p>
-<p><img src="C:\Users\Helen\Documents\GitHub\helenchw.github.io\teaching\csci3150-2016fall\lab1\figs\import-locate.png" alt="Locate machine image"></p>
+<p><img src="figs\import-locate.png" alt="Locate machine image"></p>
 <p>Keep the machine settings and click &quot;Import&quot;.</p>
-<p><img src="C:\Users\Helen\Documents\GitHub\helenchw.github.io\teaching\csci3150-2016fall\lab1\figs\import-settings.png" alt="Review machine image setting"></p>
+<p><img src="figs\import-settings.png" alt="Review machine image setting"></p>
 <p>Wait until the machine import completes and the machine will be listed in the VM manager.</p>
-<p><img src="C:\Users\Helen\Documents\GitHub\helenchw.github.io\teaching\csci3150-2016fall\lab1\figs\import-complete.png" alt="Import completes"></p>
+<p><img src="figs\import-complete.png" alt="Import completes"></p>
 <p><strong>Make sure the network cable is connected by default:</strong></p>
 <p>Select the VM and click &quot;Settings&quot;</p>
-<p><img src="C:\Users\Helen\Documents\GitHub\helenchw.github.io\teaching\csci3150-2016fall\lab1\figs\vm-setting.png" alt="Network setting of VM"></p>
+<p><img src="figs\vm-setting.png" alt="Network setting of VM"></p>
 <p> Choose &quot;Network&quot; &gt; &quot;Adapter 1&quot; and check &quot;Cable Connected&quot;</p>
-<p><img src="C:\Users\Helen\Documents\GitHub\helenchw.github.io\teaching\csci3150-2016fall\lab1\figs\vm-network.png" alt="Network setting of VM"></p>
+<p><img src="figs\vm-network.png" alt="Network setting of VM"></p>
 <h3 id="4-run-the-machine">4. Run the machine</h3>
 <h4 id="power-up-the-machine">Power up the machine</h4>
 <p>Select the VM, click &quot;Start&quot;, and a new window pops out which shows the console of the VM.</p>
-<p><img src="C:\Users\Helen\Documents\GitHub\helenchw.github.io\teaching\csci3150-2016fall\lab1\figs\run-vm.png" alt="Run the machine"></p>
+<p><img src="figs\run-vm.png" alt="Run the machine"></p>
 <p><a href="#top">Back to Top</a></p>
 <p><a name="login"></a></p>
 <h4 id="login">Login</h4>
 <p>Wait while the machine and OS boots, until you see the login screen below. <strong>You may then login using the default username &quot;csci3150&quot;, with password &quot;csci3150&quot;.</strong></p>
-<p><img src="C:\Users\Helen\Documents\GitHub\helenchw.github.io\teaching\csci3150-2016fall\lab1\figs\login.png" alt="Before login"></p>
+<p><img src="figs\login.png" alt="Before login"></p>
 <p>After login, you will see a desktop, with the system bar on the left (in contrast to that at the bottom for Windows and Mac OS).</p>
-<p><img src="C:\Users\Helen\Documents\GitHub\helenchw.github.io\teaching\csci3150-2016fall\lab1\figs\desktop.png" alt="After login"></p>
+<p><img src="figs\desktop.png" alt="After login"></p>
 <p>And now we have finished setting up a VM running Linux.</p>
 <p><a href="#top">Back to Top</a></p>
 <p><a name="poweroff"></a></p>
 <h4 id="power-off-the-machine">Power off the machine</h4>
 <p>You may normally shutdown the machine in the OS, by clicking the &quot;wheel&quot; icon on the top right-hand corner and select &quot;Shut Down ...&quot; at the bottom of the list.</p>
-<p><img src="C:\Users\Helen\Documents\GitHub\helenchw.github.io\teaching\csci3150-2016fall\lab1\figs\shutdown-1.png" alt="Shutdown from OS"></p>
+<p><img src="figs\shutdown-1.png" alt="Shutdown from OS"></p>
 <p>Select &quot;Shutdown&quot; on the right in the prompt.</p>
-<p><img src="C:\Users\Helen\Documents\GitHub\helenchw.github.io\teaching\csci3150-2016fall\lab1\figs\shutdown-2.png" alt="Shutdown from OS"></p>
+<p><img src="figs\shutdown-2.png" alt="Shutdown from OS"></p>
 <p>The windows showing the console of VM will then close.</p>
 <p>If you want to reboot your VM instead of shutting down, choose &quot;Restart&quot; on the left.</p>
 <p>When it is impossible to shut down from OS, e.g. OS becomes unresponsive, you may force the VM to shutdown from VirtualBox as follows:</p>
 <p>Select &quot;File&quot; &gt; &quot;Close&quot;.</p>
-<p><img src="C:\Users\Helen\Documents\GitHub\helenchw.github.io\teaching\csci3150-2016fall\lab1\figs\shutdown-vm-1.png" alt="Poweroff VM"></p>
+<p><img src="figs\shutdown-vm-1.png" alt="Poweroff VM"></p>
 <p>Select &quot;Power off the machine&quot; &gt; &quot;OK&quot;.</p>
-<p><img src="C:\Users\Helen\Documents\GitHub\helenchw.github.io\teaching\csci3150-2016fall\lab1\figs\shutdown-vm-2.png" alt="Poweroff VM"></p>
+<p><img src="figs\shutdown-vm-2.png" alt="Poweroff VM"></p>
 <p><a href="#top">Back to Top</a></p>
 <p><a name="control"></a></p>
 <h3 id="host-key-of-virtualbox-important-">Host key of VirtualBox (Important!!)</h3>
@@ -569,10 +569,10 @@ pre.editor-colors .fold-marker:after,
 <h3 id="open-a-terminal">Open a terminal</h3>
 <p>A terminal can be opened via searching.</p>
 <p>Click the top-most icon in the system bar and enter &quot;terminal&quot; in the search bar.</p>
-<p><img src="C:\Users\Helen\Documents\GitHub\helenchw.github.io\teaching\csci3150-2016fall\lab1\figs\search-terminal.png" alt="Search terminal"></p>
+<p><img src="figs\search-terminal.png" alt="Search terminal"></p>
 <p>Other than searching, you may use the shortcut &quot;Ctrl&quot;+&quot;Alt&quot;+&quot;t&quot;.</p>
 <p>Here is a terminal window:</p>
-<p><img src="C:\Users\Helen\Documents\GitHub\helenchw.github.io\teaching\csci3150-2016fall\lab1\figs\terminal.png" alt="Terminal"></p>
+<p><img src="figs\terminal.png" alt="Terminal"></p>
 <p>Note that the prompt <code>csci3150@csci3150-VM:~$</code> is in form of <code>[user]@[hostname]:~$</code>. <strong>The examples of commands afterwards always start with the <code>$</code> that corresponds to that at the end of this prompt.</strong></p>
 <h3 id="close-a-terminal">Close a terminal</h3>
 <p>A terminal can be closed by</p>
@@ -603,7 +603,7 @@ pre.editor-colors .fold-marker:after,
 <ul>
 <li><code>nano</code> / <code>pico</code>, is an intuitive, i.e. less complex, text editor. The most commonly used commands, like &quot;Exit&quot; (&quot;Ctrl&quot;+&quot;x&quot;), are listed at the bottom of the editor. To start editing a file, e.g. named as &quot;myfile.txt&quot;, just type <code>$ nano myfile.txt</code> in the terminal.</li>
 </ul>
-<p><img src="C:\Users\Helen\Documents\GitHub\helenchw.github.io\teaching\csci3150-2016fall\lab1\figs\nano.png" alt="Nano / Pico"></p>
+<p><img src="figs\nano.png" alt="Nano / Pico"></p>
 <ul>
 <li><code>vim</code> (<a href="http://www.vim.org">http://www.vim.org</a>), is a more-advanced and powerful, yet more complex, text editor. It takes time to get familiar with the controls, hence you are recommended to learn it in your spare time. <code>vim</code> is not pre-installed (but <code>vi</code>), and you may install it by following the example in the &quot;Package installation&quot; section.</li>
 </ul>
@@ -611,35 +611,35 @@ pre.editor-colors .fold-marker:after,
 <p><a name="root"></a></p>
 <h3 id="the-most-powerful-user-root-">The most powerful user, &quot;<em>root</em>&quot;</h3>
 <p>There is always an ultimate user &quot;<em>root</em>&quot; in Linux, who has the right to do everything. Since the password is not yet set for &quot;root&quot;, it is impossible to login in as root. However, a <em>&quot;sudoer&quot;</em> user, which is &quot;csci3150&quot; in our case, may upgrade herself to &quot;root&quot; via the command <code>sudo</code>: execute <code>$ sudo su</code> followed by entering the password of &quot;csci3150&quot;. Note that the ending character of the command prompt changes from <code>$</code> to <code>#</code> after <code>sudo</code>. To downgrade yourself back to &quot;csci3150&quot;, execute <code>exit</code>.</p>
-<p><img src="C:\Users\Helen\Documents\GitHub\helenchw.github.io\teaching\csci3150-2016fall\lab1\figs\sudo.png" alt="Upgrade yourself to root"></p>
+<p><img src="figs\sudo.png" alt="Upgrade yourself to root"></p>
 <p><a href="#top">Back to Top</a></p>
 <p><a name="transfer"></a></p>
 <h3 id="file-transfer">File transfer</h3>
 <h4 id="share-folder-between-vm-and-your-computer-s-os-">Share folder (between VM and your computer&#39;s OS)</h4>
 <p>VirtualBox allows folder sharing between your computer and the VM. To use this function, you need to first install the &quot;Guest Additions&quot;.</p>
 <p>Select &quot;Device&quot; &gt; &quot;Insert Guest Additions CD image ...&quot;.</p>
-<p><img src="C:\Users\Helen\Documents\GitHub\helenchw.github.io\teaching\csci3150-2016fall\lab1\figs\install-addon.png" alt="Install guest additions"></p>
+<p><img src="figs\install-addon.png" alt="Install guest additions"></p>
 <p>Confirm the installation by clicking &quot;Run&quot; in the prompt.</p>
-<p><img src="C:\Users\Helen\Documents\GitHub\helenchw.github.io\teaching\csci3150-2016fall\lab1\figs\install-addon-2.png" alt="Install guest additions"></p>
+<p><img src="figs\install-addon-2.png" alt="Install guest additions"></p>
 <p>Wait until the installation completes, and press &quot;Enter&quot; to close the window.</p>
-<p><img src="C:\Users\Helen\Documents\GitHub\helenchw.github.io\teaching\csci3150-2016fall\lab1\figs\install-addon-4.png" alt="Install guest additions"></p>
+<p><img src="figs\install-addon-4.png" alt="Install guest additions"></p>
 <p>Add a new folder in the machine setting:</p>
 <p>Select &quot;Machine&quot; &gt; &quot;Settings&quot; &gt; &quot;Shared Folders&quot;. Click the &quot;Adds new shared folder&quot; button on the right.</p>
-<p><img src="C:\Users\Helen\Documents\GitHub\helenchw.github.io\teaching\csci3150-2016fall\lab1\figs\add_folder_1.png" alt="&quot;Shared folders&quot; in &quot;Settings&quot;"></p>
+<p><img src="figs\add_folder_1.png" alt="&quot;Shared folders&quot; in &quot;Settings&quot;"></p>
 <p>Create a folder named &quot;shared&quot; on host OS and set it as a shared folder named &quot;shared&quot; for the VM. <strong>Remember to check both &quot;Auto-mount&quot; and &quot;Make Persistent&quot;.</strong></p>
-<p><img src="C:\Users\Helen\Documents\GitHub\helenchw.github.io\teaching\csci3150-2016fall\lab1\figs\add_folder_2.png" alt="Setup &quot;shared&quot; folder"></p>
+<p><img src="figs\add_folder_2.png" alt="Setup &quot;shared&quot; folder"></p>
 <p>After adding the folder, you shall see an entry added to the list of shared folders. Click &quot;OK&quot; to confirm.</p>
-<p><img src="C:\Users\Helen\Documents\GitHub\helenchw.github.io\teaching\csci3150-2016fall\lab1\figs\add_folder_3.png" alt="Confirm shared folder added"></p>
+<p><img src="figs\add_folder_3.png" alt="Confirm shared folder added"></p>
 <p>Back to the VM, add &quot;csci3150&quot; to the group &quot;vboxsf&quot; by executing the following command in a terminal.</p>
 <p><code>$ sudo usermod -a -G vboxsf csci3150</code></p>
-<p><img src="C:\Users\Helen\Documents\GitHub\helenchw.github.io\teaching\csci3150-2016fall\lab1\figs\add_folder_4.png" alt="Add &quot;csci3150&quot; to &quot;vboxsf&quot; group"></p>
+<p><img src="figs\add_folder_4.png" alt="Add &quot;csci3150&quot; to &quot;vboxsf&quot; group"></p>
 <p>Reboot the VM. VirtualBox will then automatically mount the shared folder inside the VM for you upon boot.</p>
 <p>After the machine reboots, open a terminal and execute the following command to check if the folder is mount .</p>
 <p><code>$ mount</code></p>
-<p><img src="C:\Users\Helen\Documents\GitHub\helenchw.github.io\teaching\csci3150-2016fall\lab1\figs\add_folder_5.png" alt="Check if shared folder is mount"></p>
+<p><img src="figs\add_folder_5.png" alt="Check if shared folder is mount"></p>
 <p>You shall found the line, <code>shared on /media/sf_shared type vboxsf (gid=999,rw)</code>, which tells you that the shared folder is mounted on the local folder <code>/media/sf_shared</code>.</p>
 <p>Let try using the shared folder by creating an empty document in the folder on the host OS, e.g. &quot;hello.txt&quot;. After creating the file, your shall see the file inside your VM.</p>
-<p><img src="C:\Users\Helen\Documents\GitHub\helenchw.github.io\teaching\csci3150-2016fall\lab1\figs\add_folder_6.png" alt="Check if the file is visible to guest OS"></p>
+<p><img src="figs\add_folder_6.png" alt="Check if the file is visible to guest OS"></p>
 <p>Then, write some content to &quot;hello.txt&quot; in VM using any text editor, e.g. <code>nano</code> (save by pressing &quot;Ctrl&quot;+&quot;x&quot; followed by &quot;Y&quot;, and press &quot;Enter&quot;).</p>
 <p>Check if the new content is reflected on the host OS.</p>
 <p><a href="#top">Back to Top</a></p>
@@ -647,16 +647,16 @@ pre.editor-colors .fold-marker:after,
 <h3 id="package-installation">Package installation</h3>
 <p>Ubuntu uses <a href="https://help.ubuntu.com/community/AptGet/Howto">APT</a> to manage packages. It automatically resolves and installs dependencies when a new package needs to be installed.</p>
 <p>To install a package, e.g. &quot;vim&quot;, type <code>$ sudo apt-get install vim</code>. Type &quot;Y&quot; to confirm the installation.</p>
-<p><img src="C:\Users\Helen\Documents\GitHub\helenchw.github.io\teaching\csci3150-2016fall\lab1\figs\apt-get.png" alt="Installing package"></p>
+<p><img src="figs\apt-get.png" alt="Installing package"></p>
 <p>The GUI of APT is &quot;Ubuntu Software Center&quot;.</p>
-<p><img src="C:\Users\Helen\Documents\GitHub\helenchw.github.io\teaching\csci3150-2016fall\lab1\figs\apt-get-gui.png" alt="Installing package"></p>
+<p><img src="figs\apt-get-gui.png" alt="Installing package"></p>
 <p>For packages available on web in <code>.deb</code>, you can always download them and double-click to install.</p>
 <p><strong>Beware that this VM runs on a 32-bit OS, which is corresponds to the architecture &quot;i386&quot;. Choose packages built for the &quot;i386&quot; architecture, otherwise they won&#39;t install.</strong></p>
 <p><a href="#top">Back to Top</a></p>
 <p><a name="manpage"></a></p>
 <h3 id="command-manual">Command Manual</h3>
 <p>It is a good habit to understand commands by looking into their manual page, e.g. find out the usage and options available for listing a directory, <code>$ man ls</code>.</p>
-<p><img src="C:\Users\Helen\Documents\GitHub\helenchw.github.io\teaching\csci3150-2016fall\lab1\figs\man.png" alt="man example on `ls`"></p>
+<p><img src="figs\man.png" alt="man example on `ls`"></p>
 <p><a href="#top">Back to Top</a></p>
 <p><a name="morevbox"></a></p>
 <h2 id="more-about-virtualbox">More about VirtualBox</h2>
