[teaching materials] add estr3102-2015fall

--- a/index.html
+++ b/index.html
@@ -1,15 +1,33 @@
 <!DOCTYPE html>
 <html>
+
 Welcome to Helen's webpage :)
 
 <h2>Teaching materials</h2>
 
 <h3>ESTR 3102 Introduction to Operating Systems (2015 Fall)</h3> 
+  <ul>
+    <li><a href="teaching/estr3102-2015fall/tut-1-gentoo-net.pdf" target="_blank">Tutorial 1 -- Setup a Gentoo VM (Network)</a></li>
+    <li><a href="teaching/estr3102-2015fall/tut-1-gentoo-usb.pdf" target="_blank">Tutorial 1 -- Setup a Gentoo VM (USB)</a></li>
+    <li><a href="teaching/estr3102-2015fall/tut-2-add-syscall.pdf" target="_blank">Tutorial 2 -- Add a system call</a></li>
+    <li><a href="teaching/estr3102-2015fall/tut-3-redhat.pdf" target="_blank">Tutorial 3 -- Setup a Redhat VM</a></li>
+  </ul>
 
 <h3>CSCI 3150 Introduction to Operating Systems (2016 Fall)</h3>
   <ul>
-    <li><a href="teaching/csci3150-2016fall/lab1/lab1.html">Lab 1 -- Setup a Linux (Ubuntu) Environment</a></li>
-    <li><a href="teaching/csci3150-2016fall/lab2/lab2.html">Lab 2 -- Basics on Bash Operators, and C program Compilation</a></li>
-    <li><a href="teaching/csci3150-2016fall/lab3/lab3.html">Lab 3 -- Bash Script Writing</a></li>
+    <li><a href="teaching/csci3150-2016fall/lab1/lab1.html" target="_blank">Lab 1 -- Setup a Linux (Ubuntu) Environment</a></li>
+    <li><a href="teaching/csci3150-2016fall/lab2/lab2.html" target="_blank">Lab 2 -- Basics on Bash Operators, and C program Compilation</a></li>
+    <li><a href="teaching/csci3150-2016fall/lab3/lab3.html" target="_blank">Lab 3 -- Bash Script Writing</a></li>
   </ul>
+
+
+<h2>Research</h2>
+
+<h3>Projects</h3>
+  <ul>
+    <li><a href="http://ansrlab.cse.cuhk.edu.hk/software/eplog/" target="_blank">EPLog</a></li>
+    <li><a href="http://ansrlab.cse.cuhk.edu.hk/software/codfs/" target="_blank">CodFS</a></li>
+  </ul>
+
+
 </html>
